--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,18 @@ shell/.meteor
 config.capnp
 oasis-config
 testrock-config
+blackrock.tar.xz
+shell/packages/accounts-email-token
+shell/packages/bignum
+shell/packages/connect
+shell/packages/sandstorm-accounts-oauth
+shell/packages/sandstorm-accounts-packages
+shell/packages/sandstorm-accounts-ui
+shell/packages/sandstorm-db
+shell/packages/sandstorm-email
+shell/packages/sandstorm-identicons
+shell/packages/sandstorm-ui-applist
+shell/packages/sandstorm-ui-grainlist
+shell/packages/sandstorm-ui-topbar
+shell/packages/simplesmtp
+
