--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,4 @@ shell/packages/sandstorm-ui-applist
 shell/packages/sandstorm-ui-grainlist
 shell/packages/sandstorm-ui-topbar
 shell/packages/simplesmtp
-
+.local
